These are the Release Notes for post-revision 2.4.5 of netperf:

*) Massage and include a DEBUG_LOG_FILE patch for Android from
   Josselin Costanzi

*) Add intial attempt to report Slot ID on HP-UX 11.31.

*) Add global -s option to cause omni tests to pause between
   setting-up the test and actually starting it.  pause is in seconds.
   Poor man's way to (attempt to) avoid issues when starting many,
   Many, MANY concurrent netperf tests. Based on patches from Google.

*) Additional timing statistics will be kept by the omni tests when
   the global "-j" option is specified.  The additional statistics are
   min, max, mean, stddev and the 50th, 90th and 99th percentiles on
   the timings measured by histograms. Based on patches from Google.

*) Add a workaround to get Linux to report TX queue drops in a
   UDP_STREAM test when the socket buffer size is larger than the
   TX queue.  Provided by Andrew Gallatin.

*) Fix the configure script to know it does not have to look for an 
   SCTP library on FreeBSD 8.X

*) The BSD and "omni" tests now have a test-specific -R option which
   is a boolean controlling whether or not SO_DONTROUTE will be set on
   the data socket.  By default, any unidirectional UDP test will have
   SO_DONTROUTE set unless a -R 1 option is given.  All other tests
   (including UDP request/response tests) will not have SO_DONTROUTE
   set unless a -R 0 option is given.  This is put into place to make
   it take longer for blithering idiots to shoot themselves in the
   foot by running tests on setups they shouldn't.

*) At least the beginnings of support for RDS, based on a circa 2007
   patch against 2.4.2 by Vladimir Sokolovsky. Rather than create the
   "RDS_STREAM" test of his patch, the intention this time around is
   to enable RDS for the "omni" tests by using an omni test-specific
   -T rds specifyer for the "transport" to use.

*) Missing fprintf format statements provided by Bruno Cornec
